--- a/app-shell-web/src/main/resources/filestorage.properties
+++ b/app-shell-web/src/main/resources/filestorage.properties
@@ -1,5 +1,5 @@
 FileSizeThreshold=3145728
-FileRepository=/data/fileUploads
+FileRepository=D:\\IDE
 FileSizeMax=15800000
 SizeMax=79000000
 storage.master.type=ftp
