--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -236,6 +236,8 @@
 
     <modules>
         <module>app-shell-web</module>
+        <module>commons-core</module>
+        <module>vctl-storage-client</module>
     </modules>
 
 </project>
