--- a/shell/vctl-storage-client/pom.xml
+++ b/shell/vctl-storage-client/pom.xml
@@ -5,9 +5,11 @@
       <artifactId>shell</artifactId>
       <version>1.0-SNAPSHOT</version>
   </parent>
+
   <groupId>com.shell</groupId>
   <artifactId>vctl-storage-client</artifactId>
-  <version>1.0-SNAPSHOT</version>	
+  <version>1.0-SNAPSHOT</version>
+
   	<properties>
 		<jackson.version>1.9.8</jackson.version>
 		<log4j.version>1.2.17</log4j.version>
@@ -93,13 +95,8 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>com.lenovo.vctl.apps.commons</groupId>
+			<groupId>com.shell</groupId>
 			<artifactId>commons-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.lenovo.vctl.apps</groupId>
-			<artifactId>app-image-core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
