--- a/shell/app-shell-web/pom.xml
+++ b/shell/app-shell-web/pom.xml
@@ -14,4 +14,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+
+            <groupId>com.shell</groupId>
+            <artifactId>vctl-storage-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
