--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -7,6 +7,8 @@
     <groupId>com.shell</groupId>
     <artifactId>shell</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>shell</name>
 
     <properties>
         <spring.version>3.0.5.RELEASE</spring.version>
@@ -99,26 +101,6 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
-        <!-- <dependency>
-                <groupId>org.apache.tuscany.sca</groupId>
-                <artifactId>tuscany-base-runtime</artifactId>
-                <version>2.0</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.tuscany.sca</groupId>
-                <artifactId>tuscany-implementation-java</artifactId>
-                    <version>2.0</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.tuscany.sca</groupId>
-                <artifactId>tuscany-binding-rmi-runtime</artifactId>
-                    <version>2.0</version>
-            </dependency>
-
-         -->
 
         <dependency>
             <groupId>com.lenovo.vctl.commons.storage</groupId>
