--- a/shell/app-shell-web/pom.xml
+++ b/shell/app-shell-web/pom.xml
@@ -21,6 +21,12 @@
             <artifactId>vctl-storage-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.shell</groupId>
+            <artifactId>vctl-storage-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+
+        </dependency>
     </dependencies>
 
 </project>
