--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -69,12 +69,6 @@
             <version>2.0</version>
         </dependency>
         <dependency>
-            <groupId>com.lenovo.vctl.apps</groupId>
-            <artifactId>app-image-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.4</version>
@@ -103,7 +97,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.lenovo.vctl.commons.storage</groupId>
+            <groupId>com.shell</groupId>
             <artifactId>vctl-storage-client</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
