--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -21,6 +21,35 @@
         <aopalliance.version>1.0</aopalliance.version>
         <cglib.version>2.2</cglib.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>Nexus</id>
+            <name>Nexus Public Repository</name>
+            <url>http://mvnrepository.lenovo.com:8088/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>vctl.snapshots</id>
+            <url>http://mvnrepository.lenovo.com:8088/nexus/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+                <updatePolicy>interval:15</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+        </repository>
+
+    </repositories>
     <dependencies>
 
         <dependency>
@@ -218,12 +247,6 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpmime</artifactId>
             <version>4.2.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring</artifactId>
-            <version> 2.5.6</version>
         </dependency>
     </dependencies>
     <build>
