--- a/shell/app-shell-web/src/main/webapp/WEB-INF/web.xml
+++ b/shell/app-shell-web/src/main/webapp/WEB-INF/web.xml
@@ -49,7 +49,7 @@
     </filter-mapping>
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 
 
