--- a/shell/app-shell-web/pom.xml
+++ b/shell/app-shell-web/pom.xml
@@ -41,17 +41,22 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version> 3.0.6.RELEASE</version>
+            <version>3.0.6.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version> 3.0.6.RELEASE</version>
+            <version>3.0.6.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId> spring</artifactId>
-            <version> 2.5.6</version>
+            <artifactId>spring</artifactId>
+            <version>2.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0.2</version>
         </dependency>
 
     </dependencies>
