--- a/shell/dal/vctl-dal-dao/pom.xml
+++ b/shell/dal/vctl-dal-dao/pom.xml
@@ -4,11 +4,11 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.lenovo.vctl.dal</groupId>
+        <groupId>com.shell</groupId>
 		<artifactId>vctl-dal</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com.lenovo.vctl.dal.dao</groupId>
+    <groupId>com.shell</groupId>
 	<artifactId>vctl-dal-dao</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>vctl-dal-dao</name>
