--- a/shell/app-shell-web/pom.xml
+++ b/shell/app-shell-web/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>persistence-api</artifactId>
             <version>1.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.shell</groupId>
+            <artifactId>vctl-dal-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
 
