--- a/shell/pom.xml
+++ b/shell/pom.xml
@@ -248,6 +248,17 @@
             <artifactId>httpmime</artifactId>
             <version>4.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>3.0.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>3.0.6.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
