--- a/shell/app-shell-web/src/main/resources/filestorage.properties
+++ b/shell/app-shell-web/src/main/resources/filestorage.properties
@@ -1,5 +1,5 @@
 FileSizeThreshold=3145728
-FileRepository=D:\\IDE
+FileRepository=/data/download/shell
 FileSizeMax=15800000
 SizeMax=79000000
 storage.master.type=ftp
