--- a/shell/app-shell-web/pom.xml
+++ b/shell/app-shell-web/pom.xml
@@ -55,6 +55,25 @@
         </dependency>
 
     </dependencies>
-<!--  -->
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.2</version>
+                <!--                 <configuration>
+                                    <webResources>
+                                        <resource>
+                                            this is relative to the pom.xml directory
+                                            <directory>src/main/resources/filters/${env}</directory>
+                                            <targetPath>WEB-INF/classes</targetPath>
+                                            <filtering>true</filtering>
+                                        </resource>
+                                    </webResources>
+                                </configuration> -->
+            </plugin>
+        </plugins>
+    </build>
 
         </project>
