--- a/shell/app-shell-web/pom.xml
+++ b/shell/app-shell-web/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.shell</groupId>
     <artifactId>app-shell-web</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <package>war</package>
 
     <parent>
         <groupId>com.shell</groupId>
