--- a/shell/.gitignore
+++ b/shell/.gitignore
@@ -1,10 +1,11 @@
-/.settings
-/.idea
+.settings
+.idea
 /target
-/.project
-/.classpath
+.project
+.classpath
 /db/*
 /record
 /db
 /jdbm
 Thumbs.db
+
